# em3ulator

./: .gitignore  CMakeLists.txt
src/: FlexibleOperand.cpp  FlexibleOperand.h  Instruction.cpp  Instruction.h  Processor.cpp  Processor.h  Register.cpp  Register.h
src/tests/: FlexibleOperand.t.cpp  Processor.t.cpp  Register.t.cpp
